Fixing parts of menu collapse
-Collapse doesn't work for resume and design links

--- a/main.css
+++ b/main.css
@@ -60,11 +60,6 @@ header {
   flex-direction: column;
 }
 
-.wrapper{
-    width: 1400px;
-    margin: 0 auto;
-}
-
 h1, h2, h3{
   font-family: "museo-sans", sans-serif;
   font-weight: 700;
@@ -82,7 +77,6 @@ h2 {
 .navbar {
   padding: 1vw 4vw;
 }
-
 
 .container {
   max-width: 1300px;
@@ -133,12 +127,23 @@ hr {
   text-align: left;
   display: inline-block;
 }
+
+.icon-spacing {
+  margin: -3px;
+}
+
 .navbar {
 box-shadow: 0 0 15px 5px rgba(0,0,0,.1);
 }
 .navbar-brand a {
   color: #444c54;
 }
+
+#navbar-content.in,
+#navbar-content.collapsing {
+  display: block!important;
+}
+
 .portfolio-tile {
   background-size: cover;
   height: 40vh;
@@ -171,8 +176,12 @@ svg path {
   fill: #444c54;
 }
 
-.icon-spacing {
-  margin: -3px;
+.work-text {
+  margin: 30px 0 0 0;
+}
+
+.work-icons {
+  margin: 20px 0;
 }
 
 @media (max-width: 575.98px) {
@@ -215,6 +224,12 @@ svg path {
 @media (min-width: 992px) {
   h1 {
     font-size: 44px;
+  }
+  .work-text {
+    margin: 10px 0 20px 0;
+  }
+  .work-icons {
+    margin: 70px 0;
   }
 }
 
